--- a/glongtak.html
+++ b/glongtak.html
@@ -23,7 +23,7 @@
     }
 </style>
 <body>
-    <h1>ICT SU</h1>
+    <h1>ICT SU Paris</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta earum et laboriosam mollitia itaque dolores assumenda, dolorum quia recusandae numquam quae aliquid ad! Nihil explicabo quasi quaerat error laudantium eveniet.lo Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora amet praesentium minima repudiandae quo laborum quis perspiciatis natus ab! Consequuntur, esse nostrum voluptate facere consectetur quasi obcaecati eveniet. Quis, rem?</p>
 
 </body>
