--- a/glongtak.html
+++ b/glongtak.html
@@ -21,6 +21,11 @@
         transition: 1s;
         color: white;
     }
+    img {
+        width: 30%;
+        padding-left: auto;
+        padding-right: auto;
+    }
 </style>
 <body>
     <h1>ICT SU Paris</h1>
