--- a/glongtak.html
+++ b/glongtak.html
@@ -23,8 +23,8 @@
     }
     img {
         width: 30%;
-        padding-left: auto;
-        padding-right: auto;
+        margin-left: auto;
+        margin-right: auto;
     }
 </style>
 <body>
