--- a/glongtak.html
+++ b/glongtak.html
@@ -25,7 +25,9 @@
         width: 30%;
         margin-left: auto;
         margin-right: auto;
+        display: block;
     }
+    
 </style>
 <body>
     <h1>ICT SU Paris</h1>
