--- a/glongtak.html
+++ b/glongtak.html
@@ -1,37 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>glongtak</title>
 </head>
 <style>
-    h1 {
-        font-family: 'Courier New', Courier, monospace;
-        font-size: 60px;
-        text-align: center;
+    ul {
+        display: inline-block;
+        text-align: left;
     }
-    p {
-        text-align: center;
-        font-family: 'Courier New', Courier, monospace;
 
+    button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 3px solid rgb(0, 0, 0);
+        margin-left: 900px;
+        background-color: rgb(255, 255, 255);
     }
-    body:hover {
+
+    button:hover {
+        color: azure;
         background-color: black;
-        transition: 1s;
-        color: white;
+        transition: 0.5s;
     }
-    img {
-        width: 30%;
-        margin-left: auto;
-        margin-right: auto;
-        display: block;
-    }
-    
-</style>
-<body>
-    <h1>ICT SU Paris</h1>
-    <img src="https://github.com/glongtak/glongtak.github.io/assets/144388577/f2e40570-a8ce-4caf-8727-a26926f6bc71" alt="tak with jarn">
 
+    a:visited:hover {
+        color: azure;
+    }
+
+    a:visited {
+        color: rgb(0, 0, 0);
+    }
+    body {
+        font-family: 'Courier New', Courier, monospace;
+    }
+</style>
+
+<body>
+
+    <div class="ict">
+        <h1 style="text-align: center; font-family: 'Courier New', Courier, monospace;">ICT SU</h1>
+    </div>
+    <div class="img">
+        <img src="https://github.com/glongtak/glongtak.github.io/assets/144388577/7a180696-bee9-424a-a14a-caeb011462e3"
+            alt="glongtak kub eiei"
+            style="display: block; margin-left: auto; margin-right: auto; width: 20%; border: 2px solid black;" </div>
+        <div class="name" style="text-align: center; ">
+            <button type="button" style="width: 100px;"><a href="https://github.com/glongtak/glongtak.github.io"
+                    target="_blank" style="text-decoration: none;">Github repository</a></button>
+            <ul>
+                <li><strong>Full name(ENG) : Paris Nakatuch</strong></li>
+                <li><strong>Full name(TH) : ภฤศ นาคะธัช</strong></li>
+                <li><strong>Nickname: กลองแต๊ก</strong></li>
+                <li><strong>Guest : Maykin</strong></li>
+                <br>
+                <ul>
+                    <li><strong>Security of Quality Attributes</strong></li>
+                    <ul style="list-style-type: square;">
+                        <li><strong>ChatGPT : “Security of quality attributes” </strong>
+                            หมายถึงการให้ความสำคัญกับเรื่องความปลอดภัยในระบบซอฟต์แวร์เป็น<br>ส่วนสำคัญของคุณภาพรวมของระบบซอฟต์แวร์
+                            นั่นหมายความว่านอกเหนือจากความสามารถในการใช้งาน <strong>(functionality)</strong><br>
+                            ระบบซอฟต์แวร์ยังต้องถูกออกแบบ ดำเนินการ และดูแลรักษาโดยให้ความสำคัญกับเรื่องความปลอดภัย<br>
+                            โดยพิจารณาเรื่องความลับ <strong>(confidentiality)</strong>, ความคงสมบูรณ์
+                            <strong>(integrity)</strong>, และความพร้อมใช้งาน<br>
+                            <strong>(availability)</strong> ด้วย
+                        </li>
+                        <li><strong> GoogleBard : </strong>คือความสามารถในการปกป้องคุณสมบัติของคุณภาพของระบบจากการใช้งาน
+                            การแก้ไข
+                            หรือทำลายโดยไม่ได้รับอนุญาต<br>
+                            สิ่งนี้มีความสำคัญเพราะสามารถช่วยรับรองได้ว่าระบบจะยังคงตอบสนองความต้องการของผู้ใช้ได้แม้ในสถานการณ์ที่มีภัยคุกคาม<br>
+                            มีวิธีต่างๆ มากมายในการปรับปรุงความปลอดภัยของคุณภาพของคุณสมบัติ เช่น
+                            การบังคับใช้การควบคุมความปลอดภัย<br> การออกแบบระบบที่ปลอดภัย และการให้ความรู้แก่ผู้ใช้
+                            สรุปได้ว่า<br>
+                            ความปลอดภัยของคุณภาพของคุณสมบัติเป็นสิ่งสำคัญสำหรับองค์กรที่ต้องการปกป้องระบบและข้อมูลของตน
+                        </li>
+                        <li><strong>Security in my opinion :</strong> ผมยกตัวอย่างระบบรักษาความปลอดภัยในธนาคาร:
+                            ธนาคารจำเป็นต้องปกป้องข้อมูลทางการเงินของลูกค้า<br>
+                            Securityสามารถช่วยปกป้องข้อมูลนี้จากการถูกเข้าถึงโดยบุคคลที่ไม่ได้รับอนุญาตครับ</li>
+
+                    </ul>
+
+                </ul>
+            </ul>
+        </div>
 </body>
+
 </html>
